chore: applied suggestions

--- a/src/content/docs/es/guides/integrations-guide/vercel.mdx
+++ b/src/content/docs/es/guides/integrations-guide/vercel.mdx
@@ -1,7 +1,7 @@
 ---
 type: integration
 title: '@astrojs/vercel'
-description: Learn how to use the @astrojs/vercel SSR adapter to deploy your Astro project.
+description: Aprende como usar el adaptador SSR @astrojs/vercel para desplegar tu proyecto Astro.
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/vercel/'
 hasREADME: true
 category: adapter
@@ -24,7 +24,7 @@ Si deseas [usar renderizado del lado del servidor (SSR)](/es/guides/server-side-
 
 ## Instalación
 
-Agrega el adaptador Vercel para habilitar SSR en tu proyecto Astro con el siguiente comando `astro add`. Esto instalará el adaptador y realizará los cambios apropiados en tu archivo `astro.config.mjs` en un solo paso.
+Agrega el adaptador Vercel para habilitar SSR en tu proyecto Astro con el comando `astro add`. Esto instalará el adaptador y realizará los cambios apropiados en tu archivo `astro.config.mjs` en un solo paso.
 
 ```sh
 # Usando NPM
@@ -65,10 +65,10 @@ Puedes desplegar en diferentes objetivos:
 *   `static`: genera un sitio estático siguiendo los formatos de salida, redirecciones, etc. de Vercel.
 
 :::note
-Desplegar en el Edge tiene [sus limitaciones](https://vercel.com/docs/concepts/functions/edge-functions#known-limitations). Una función de borde no puede tener más de 1 MB de tamaño y no admiten API nativas de Node.js, entre otras.
+Desplegar en el Edge tiene [sus limitaciones](https://vercel.com/docs/concepts/functions/edge-functions#known-limitations). Una función edge no puede ser más grande de 1 MB y no admite API nativas de Node.js, entre otras.
 :::
 
-Puedes cambiar a donde apuntar cambiando la importación:
+Puedes cambiar el destino modificando la importación:
 
 
 ```js
@@ -142,7 +142,7 @@ Cuando se construye para el Edge, todas las dependencias se empaquetan en un sol
 **Tipo:** `string[]`<br/>
 **Disponible para:** Serverless
 
-Esa esta propiedad para excluir cualquier archivo del proceso de empaquetado que de otra manera se incluirá.
+Utiliza esta propiedad para excluir cualquier archivo del proceso de empaquetado que de otra manera se incluiría.
 
 ```js
 // astro.config.mjs
@@ -159,7 +159,7 @@ export default defineConfig({
 
 ### Middleware de Vercel
 
-Puedes usar el middleware de Vercel para interceptar una solicitud y redirigirla antes de enviar una respuesta. El middleware de Vercel puede ejecutarse para despliegues de borde, SSR y estáticos. No necesitas instalar `@vercel/edge` para escribir middleware, pero si necesitas instalarlo para usar características como la geolocalización. Para obtener más información, consulta la [documentación de middleware de Vercel](https://vercel.com/docs/concepts/functions/edge-middleware).
+Puedes usar el middleware de Vercel para interceptar una solicitud y redirigirla antes de enviar una respuesta. El middleware de Vercel puede ejecutarse en implementaciones de Edge, SSR y estáticas. No necesitas instalar `@vercel/edge` para escribir middleware, pero sí necesitas instalarlo para usar características como la geolocalización. Para obtener más información, consulta la [documentación de middleware de Vercel](https://vercel.com/docs/concepts/functions/edge-middleware).
 
 1.  Agrega un archivo `middleware.js` en la raíz de tu proyecto:
 
@@ -183,7 +183,7 @@ Puedes usar el middleware de Vercel para interceptar una solicitud y redirigirla
 
 ## Solución de problemas
 
-**Un par de paquetes complejos conocidos (ejemplo: [puppeteer](https://github.com/puppeteer/puppeteer)) no admiten el empaquetado y, por lo tanto, no funcionarán correctamente con este adaptador.** De forma predeterminada, Vercel no incluye los archivos y paquetes instalados de npm de la carpeta `./node_modules` de tu proyecto. Para abordar esto, el adaptador `@astrojs/vercel` empaqueta automáticamente tu salida de compilación final usando `esbuild`.
+**Un par de paquetes conocidos por ser complejos (por ejemplo: [puppeteer](https://github.com/puppeteer/puppeteer)) no admiten el empaquetado y, por lo tanto, no funcionarán correctamente con este adaptador.** Por defecto, Vercel no incluye los archivos y paquetes instalados de npm de la carpeta `./node_modules` de tu proyecto. Para solucionar esto, el adaptador `@astrojs/vercel` empaqueta automáticamente la salida final de la compilación usando `esbuild`.
 
 Para obtener ayuda, consulta el canal `#support` en [Discord](https://astro.build/chat). ¡Nuestros amables miembros del equipo de soporte están aquí para ayudarte!
 
@@ -193,6 +193,6 @@ Este paquete es mantenido por el equipo principal de Astro. ¡Estás invitado a 
 
 ## Changelog
 
-Ve el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/vercel/CHANGELOG.md) para un historial de cambios en esta integración.
+Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/vercel/CHANGELOG.md) para un historial de cambios en esta integración.
 
 [astro-integration]: /es/guides/integrations-guide/
