add: added missing caution note

--- a/src/content/docs/es/guides/integrations-guide/vercel.mdx
+++ b/src/content/docs/es/guides/integrations-guide/vercel.mdx
@@ -181,6 +181,10 @@ Puedes usar el middleware de Vercel para interceptar una solicitud y redirigirla
     ```
 2.  Mientras desarrollas localmente, puedes ejecutar `vercel dev` para ejecutar el middleware. En producción, Vercel lo manejará por ti.
 
+:::caution
+**¿Intentando reescribir?** Actualmente, reescribir una solicitud con middleware solo funciona para archivos estáticos.
+:::
+
 ## Solución de problemas
 
 **Un par de paquetes conocidos por ser complejos (por ejemplo: [puppeteer](https://github.com/puppeteer/puppeteer)) no admiten el empaquetado y, por lo tanto, no funcionarán correctamente con este adaptador.** Por defecto, Vercel no incluye los archivos y paquetes instalados de npm de la carpeta `./node_modules` de tu proyecto. Para solucionar esto, el adaptador `@astrojs/vercel` empaqueta automáticamente la salida final de la compilación usando `esbuild`.
