Apply suggestions from code review
Co-authored-by: Waxer59 <78129249+Waxer59@users.noreply.github.com>

--- a/src/content/docs/es/guides/integrations-guide/alpinejs.mdx
+++ b/src/content/docs/es/guides/integrations-guide/alpinejs.mdx
@@ -1,7 +1,7 @@
 ---
 type: integration
 title: '@astrojs/alpinejs'
-description: Learn how to use the @astrojs/alpinejs framework integration to extend component support in your Astro project.
+description: Aprenda a usar la integración de @astrojs/alpinejs para ampliar la compatibilidad de Alpinejs en tu proyecto de Astro.
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/alpinejs/'
 hasREADME: true
 category: renderer
@@ -16,7 +16,7 @@ Esta **[integración de Astro][astro-integration]** agrega [Alpine.js](https://a
 
 ### Instalación rápida
 
-La herramienta de línea de comandos `astro add` automatiza la instalación para ti. Ejecuta uno de los siguientes comandos en una nueva ventana de terminal. (Si no estás seguro de qué gestor de paquetes estás usando, ejecuta el primer comando.) Luego, sigue las instrucciones y escribe "y" en la terminal (es decir, "sí") para cada uno.
+La herramienta de línea de comandos `astro add` automatiza la instalación por ti. Ejecuta uno de los siguientes comandos en una nueva ventana de terminal. (Si no estás seguro de qué gestor de paquetes estás usando, ejecuta el primer comando.) Luego, sigue las instrucciones y escribe "y" en la terminal (es decir, "sí") para cada uno.
 
 ```sh
 # Usando NPM
@@ -37,7 +37,7 @@ Primero, instala el paquete `@astrojs/alpinejs` usando tu gestor de paquetes. Si
 npm install @astrojs/alpinejs
 ```
 
-La mayoría de los gestores de paquetes instalarán las dependencias asociadas como pares también. Sin embargo, si ves un aviso "No se puede encontrar el paquete 'alpinejs'" (o similar) al iniciar Astro, deberás instalar manualmente Alpine.js:
+La mayoría de los gestores de paquetes también instalarán las dependencias asociadas. Sin embargo, si ves un aviso "No se puede encontrar el paquete 'alpinejs'" (o similar) al iniciar Astro, deberás instalar manualmente Alpine.js:
 
 ```sh
 npm install alpinejs @types/alpinejs
@@ -67,7 +67,7 @@ Revisa nuestra [documentación de integraciones de Astro][astro-integration] par
 
 La integración de Alpine.js no te da control sobre cómo se carga o inicializa el script. Si requieres este control, considera [instalar y usar Alpine.js manualmente](https://alpinejs.dev/essentials/installation). Astro admite todas las instrucciones de configuración manual de Alpine.js oficialmente documentadas, usando etiquetas `<script>` dentro de un componente Astro.
 
-**Actualmente no es posible [extender Alpine.js](https://alpinejs.dev/advanced/extending) al usar este componente.** Si necesita esta función, considere seguir [la configuración manual de Alpine.js](https://alpinejs.dev/essentials/installation) en su lugar usando una etiqueta de script de Astro:
+**Actualmente no es posible [extender Alpine.js](https://alpinejs.dev/advanced/extending) al usar este componente.** Si necesitas esta función, considera seguir [la configuración manual de Alpine.js](https://alpinejs.dev/essentials/installation) en su lugar usando una etiqueta de script de Astro:
 
 ```astro title="src/pages/index.astro"
 <!-- Ejemplo: Carga AlpineJS en una sola página. -->
@@ -92,17 +92,17 @@ La integración de Alpine.js no admite ninguna configuración personalizada en e
 
 ## Solución de problemas
 
-Para obtener ayuda, consulte el canal `#support` en [Discord](https://astro.build/chat). ¡Nuestros amables miembros del Equipo de Soporte están aquí para ayudar!
+Para obtener ayuda, consulta el canal `#support` en [Discord](https://astro.build/chat). ¡Nuestros amables miembros del Equipo de Soporte están aquí para ayudar!
 
 También puedes consultar nuestra [documentación de integraciones de Astro][astro-integration] para obtener más información sobre las integraciones.
 
 ## Contribuyendo
 
-Este paquete es mantenido por el equipo central de Astro. ¡Estás invitado a enviar un problema o PR!
+Este paquete es mantenido por el equipo de Astro. ¡Estás invitado a abrir una issue o PR!
 
 ## Changelog
 
-Ve el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/alpinejs/CHANGELOG.md) para un historial de cambios en esta integración.
+Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/alpinejs/CHANGELOG.md) para un historial de cambios en esta integración.
 
 [astro-integration]: /es/guides/integrations-guide/
 
