Apply suggestions from code review

--- a/src/content/docs/es/guides/integrations-guide/vercel.mdx
+++ b/src/content/docs/es/guides/integrations-guide/vercel.mdx
@@ -1,7 +1,7 @@
 ---
 type: integration
 title: '@astrojs/vercel'
-description: Aprende como usar el adaptador SSR @astrojs/vercel para desplegar tu proyecto Astro.
+description: Aprende como usar el adaptador SSR @astrojs/vercel para desplegar tu proyecto de Astro.
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/vercel/'
 hasREADME: true
 category: adapter
@@ -10,21 +10,21 @@ i18nReady: true
 
 import Video from '~/components/Video.astro';
 
-Este adaptador permite que Astro despliegue tu sitio SSR en [Vercel](https://www.vercel.com/).
+Este adaptador permite que Astro despliegue tu proyecto usando redenrizado en el servidor (SSR) en [Vercel](https://www.vercel.com/).
 
-Aprende como desplegar tu sitio Astro en nuestro [guía de despliegue en Vercel](/es/guides/deploy/vercel/).
+Aprende como desplegar tu proyecto de Astro consultando nuestra [guía de despliegue en Vercel](/es/guides/deploy/vercel/).
 
 ## ¿Por qué Astro Vercel?
 
-Si estás usando Astro como un generador de sitios estáticos — su comportamiento es fuera de serie — no necesitas un adaptador.
+Si estás usando Astro como un generador de sitios estáticos no necesitas un adaptador.
 
-Si deseas [usar renderizado del lado del servidor (SSR)](/es/guides/server-side-rendering/), Astro requiere un adaptador que coincida con el tiempo de ejecución de tu despliegue.
+Si deseas [usar renderizado del lado del servidor (SSR)](/es/guides/server-side-rendering/), Astro requiere un adaptador que coincida con el runtime de tu despliegue.
 
 [Vercel](https://www.vercel.com/) es una plataforma de despliegue que te permite alojar tu sitio conectándote directamente a tu repositorio de GitHub. Este adaptador mejora el proceso de compilación de Astro para preparar tu proyecto para el despliegue a través de Vercel.
 
 ## Instalación
 
-Agrega el adaptador Vercel para habilitar SSR en tu proyecto Astro con el comando `astro add`. Esto instalará el adaptador y realizará los cambios apropiados en tu archivo `astro.config.mjs` en un solo paso.
+Agrega el adaptador Vercel para habilitar SSR en tu proyecto de Astro con el comando `astro add`. Esto instalará el adaptador y realizará los cambios apropiados en tu archivo `astro.config.mjs` en un solo paso.
 
 ```sh
 # Usando NPM
@@ -193,10 +193,10 @@ Para obtener ayuda, consulta el canal `#support` en [Discord](https://astro.buil
 
 ## Contribuyendo
 
-Este paquete es mantenido por el equipo principal de Astro. ¡Estás invitado a enviar un problema o PR!
+Este paquete es mantenido por el equipo de Astro. ¡Estás invitado a enviar un problema o PR!
 
 ## Changelog
 
-Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/vercel/CHANGELOG.md) para un historial de cambios en esta integración.
+Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/vercel/CHANGELOG.md) para ver el historial de cambios en esta integración.
 
 [astro-integration]: /es/guides/integrations-guide/
