Apply suggestions from code review

--- a/src/content/docs/es/guides/integrations-guide/vercel.mdx
+++ b/src/content/docs/es/guides/integrations-guide/vercel.mdx
@@ -20,7 +20,7 @@ Si estás usando Astro como un generador de sitios estáticos no necesitas un ad
 
 Si deseas [usar renderizado del lado del servidor (SSR)](/es/guides/server-side-rendering/), Astro requiere un adaptador que coincida con el runtime de tu despliegue.
 
-[Vercel](https://www.vercel.com/) es una plataforma de despliegue que te permite alojar tu sitio conectándote directamente a tu repositorio de GitHub. Este adaptador mejora el proceso de compilación de Astro para preparar tu proyecto para el despliegue a través de Vercel.
+[Vercel](https://www.vercel.com/) es una plataforma de despliegue que te permite alojar tu proyecto conectándote directamente a tu repositorio de GitHub. Este adaptador ajusta el proceso de compilación de Astro para preparar tu proyecto para el despliegue a través de Vercel.
 
 ## Instalación
 
