chore: applied suggestions

--- a/src/content/docs/es/guides/cms/statamic.mdx
+++ b/src/content/docs/es/guides/cms/statamic.mdx
@@ -1,6 +1,6 @@
 ---
-title: Headless Statamic & Astro
-description: Add content to your Astro project using Statamic as a CMS
+title: Headless Statamic y Astro
+description: Agrega contenido a tu proyecto Astro usando Statamic como CMS
 type: cms
 stub: false
 service: Statamic
@@ -19,7 +19,7 @@ Para empezar, necesitarás lo siguiente:
 
 1. Solo están disponibles las API REST y GraphQL API en la versión pro de Statamic. Puedes probar la versión Pro gratis en tu [máquina local](https://statamic.dev/tips/how-to-enable-statamic-pro#trial-mode).
 2. **Un proyecto Astro** - Si todavía necesitas un proyecto Astro, nuestra [guía de instalación](/es/install/auto/) te pondrá en marcha rápidamente.
-3. ** Un sitio Statamic** - Si necesitas un sitio Statamic, [esta guía](https://statamic.dev/quick-start-guide) te ayudará a empezar.
+3. **Un sitio Statamic** - Si necesitas un sitio Statamic, [esta guía](https://statamic.dev/quick-start-guide) te ayudará a empezar.
 Recuerda [habilitar la API REST](https://statamic.dev/rest-api#enable-the-api) o la [API GraphQL](https://statamic.dev/graphql#enable-graphql) añadiendo `STATAMIC_API_ENABLED=true` o `STATAMIC_GRAPHQL_ENABLED=true` en el archivo `.env` y habilitando los recursos necesarios en el archivo de configuración de la API.
 
 :::caution
