fix broken links

--- a/src/content/docs/es/reference/errors/expected-image.mdx
+++ b/src/content/docs/es/reference/errors/expected-image.mdx
@@ -22,5 +22,5 @@ import myImage from "../assets/my_image.png";
 En la mayoría de los casos, este error ocurre cuando el valor pasado a `src` es undefined.
 
 **Ver también:**
--  [Assets (Experimental)](/en/guides/assets/)
+-  [Assets (Experimental)](/es/guides/assets/)
 
