--- a/src/content/docs/es/reference/errors/page-number-param-not-found.mdx
+++ b/src/content/docs/es/reference/errors/page-number-param-not-found.mdx
@@ -14,5 +14,5 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ## ¿Qué salió mal?
 El parámetro número de página no fue encontrado en su ruta de archivo.
 
-**See Also:**
+**Ver también:**
 -  [Pagination](/es/core-concepts/routing/#paginación)
