--- a/src/content/docs/es/guides/integrations-guide/tailwind.mdx
+++ b/src/content/docs/es/guides/integrations-guide/tailwind.mdx
@@ -1,7 +1,7 @@
 ---
 type: integration
 title: '@astrojs/tailwind'
-description: Learn how to use the @astrojs/tailwind integration in your Astro project.
+description: Aprende como usar la integración @astrojs/tailwind en tu proyecto Astro.
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/tailwind/'
 hasREADME: true
 category: other
@@ -15,7 +15,7 @@ Esta **[integración de Astro][astro-integration]** trae las clases de CSS de ut
 
 ## ¿Por qué Tailwind?
 
-Tailwind te permite usar clases de utilidad en lugar de escribir CSS. Estas clases de utilidad son en su mayoría uno a uno con un cierto ajuste de propiedad CSS: por ejemplo, agregar el `text-lg` a un elemento es equivalente a establecer `font-size: 1.125rem` en CSS. ¡Es posible que le resulte más fácil escribir y mantener sus estilos usando estas clases de utilidad predefinidas!
+Tailwind te permite usar clases de utilidad en lugar de escribir CSS. Estas clases de utilidad son en su mayoría uno a uno con un cierto ajuste de propiedad CSS: por ejemplo, agregar el `text-lg` a un elemento es equivalente a establecer `font-size: 1.125rem` en CSS. ¡Es posible que te resulte más fácil escribir y mantener tus estilos usando estas clases de utilidad predefinidas!
 
 Si no te gusta esa configuración predeterminada, puedes [personalizar el archivo de configuración de Tailwind](https://tailwindcss.com/docs/configuration) según los requisitos de diseño de tu proyecto. Por ejemplo, si el "texto grande" en tu diseño es en realidad `2rem`, puedes [cambiar la configuración de `lg` fontSize](https://tailwindcss.com/docs/font-size#customizing-your-theme) a `2rem`.
 
@@ -201,4 +201,4 @@ Este paquete es mantenido por el equipo central de Astro. ¡Estás invitado a en
 
 ## Changelog
 
-Ve el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/tailwind/CHANGELOG.md) para un historial de cambios en esta integración.
+Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/tailwind/CHANGELOG.md) para un historial de cambios en esta integración.
