--- a/src/content/docs/es/reference/errors/page-number-param-not-found.mdx
+++ b/src/content/docs/es/reference/errors/page-number-param-not-found.mdx
@@ -15,4 +15,4 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 El parámetro número de página no fue encontrado en su ruta de archivo.
 
 **Ver también**
--  [Pagination](/es/core-concepts/routing/#paginación)
+-  [Paginación](/es/core-concepts/routing/#paginación)
