translate up to 'Migrando Tests'

--- a/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
@@ -13,7 +13,7 @@ Here are some key concepts and migration strategies to help you get started. Use
 
 ## Principales similitudes entre Next.js y Astro
 
-Next.js and Astro share some similarities that will help you migrate your project:
+Next.js y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto:
 
 - The [syntax of `.astro` files is similar to JSX](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx). Writing Astro should feel familiar.
 - Astro projects can also be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#hybrid-rendering).
@@ -24,7 +24,7 @@ Next.js and Astro share some similarities that will help you migrate your projec
 
 ## Principales diferencias entre Next.js y Astro
 
-When you rebuild your Next.js site in Astro, you will notice some important differences:
+Cuando reconstruyas tu sitio de Next.js a Astro, notarás algunas diferencias importantes:
 
 - [MPA vs SPA](/en/concepts/mpa-vs-spa/): Next.js is a React single-page app, and uses `index.js` as your project's root. Astro is a multi-page site, and `index.astro` is your home page.
 
@@ -32,7 +32,7 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 
 - [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites with small pieces of interactivity. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate using `.astro` components, such as dashboards.
 
-## Convertir tu proyecto de Next.js
+## Migrar tu proyecto de Next.js
 
 Each project migration will look different, but there are some common actions you will perform when converting from Next.js to Astro.
 
@@ -317,22 +317,22 @@ Alternatively, you can use [content collections](/en/guides/content-collections/
 
 ### Migrando Tests
 
-As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box if you have been able to match the markup of your Next site. Testing libraries such as Jest and React Testing Library can be imported and used in Astro to test your React components.
+Como Astro produce HTML sin procesar, es posible escribir tests end-to-end utilizando la salida del paso de compilación. Cualquier test end-to-end escrito anteriormente  podría funcionar sin problemas si has podido coincidir con el marcado de tu sitio de Next. Bibliotecas de testing como Jest y React Testing Library pueden ser importadas y utilizadas en Astro para testear tus componentes de React.
 
-See Astro's [testing guide](/en/guides/testing/) for more.
+Consulta la [guía de testing](/es/guides/testing/) de Astro para obtener más información.
 
 ## Referencia: Cómo convertir la sintaxis de Next.js a Astro
 
 ### Migrando los enlaces de Next a Astro
 
-Convert any Next `<Link to="">`, `<NavLink>` etc. components to HTML `<a href="">` tags. 
+Convierte cualquier componente de Next `<Link to="">`, `<NavLink>` etc. a etiquetas HTML `<a href="">`. 
 
 ```astro del={1} ins={2}
 <Link to="/blog">Blog</Link>
 <a href="/blog">Blog</a>
 ```
 
-Astro does not use any special component for links, although you are welcome to build your own `<Link>` component. You can then import and use this `<Link>` just as you would any other component.
+Astro no utiliza ningún componentes especial para los enlaces, aunque puedes crear tu propio componente `<Link>`. Luego puedes importar y usar este `<Link>` como lo harías con cualquier otro componente.
 
 ```astro title="src/components/Link.astro"
 ---
@@ -343,9 +343,9 @@ const { to } = Astro.props
 
 ### Migrando las importaciones de Next a Astro
 
-Update any [file imports](/en/guides/imports/) to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
+Actualiza cualquier [importación de archivos](/es/guides/imports/) para referencias rutas de archivo relativas de maneta exacta. Esto puede hacerse utilizando un [alias de importación](/es/guides/typescript/#alias-de-importación), o escribiendo la ruta relativa completa. 
 
-Note that `.astro` and several other file types must be imported with their full file extension.
+Ten encuenta que `.astro` y varios otros tipos de archivos deben ser importados con su extensión de achivo completa.
 
 ```astro title="src/pages/authors/Fred.astro"
 ---
@@ -356,7 +356,7 @@ import Card from `../../components/Card.astro`
 
 ### Migrando las propiedades Children de Next a Astro
 
-Convert any instances of `{children}` to an Astro `<slot />`. Astro does not need to receive `{children}` as a function prop and will automatically render child content in a `<slot />`.
+Convierte cualquier instancia de `{children}` a un elemento `<slot />` de Astro. Astro no necesita recibir `{children}` como una función prop y automáticamente renderizará `<slot />`.
 
 ```astro title="src/components/MyComponent" del={3-9} ins={11-13}
 ---
@@ -374,24 +374,24 @@ export default function MyComponent(props) {
 </div>
 ```
 
-React components that pass multiple sets of children can be migrated to an Astro component using [named slots](/en/core-concepts/astro-components/#named-slots).
+Los componentes de React que pasan múltiples conjuntos de hijos se pueden migrar a un un componente de Astro usando [slots con nombre](/es/core-concepts/astro-components/#slots-con-nombre).
 
-See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-components/#slots).
+Ver más acerca del [uso especifico de `<slot />` en Astro](/es/core-concepts/astro-components/#slots).
 
 ### Migrando la obtención de datos de Next a Astro
 
-Convert any instances of `getStaticProps()` to either `Astro.glob()` or `getCollection()`/`getEntryBySlug()` in order to access data from other files in your project source. To [fetch remote data](/en/guides/data-fetching/), use `fetch()`.
+Convierte cualquier instancia de `getStaticProps()` a `Astro.glob()` o `getCollection()`/`getEntryBySlug()` para acceder a los datos de otros archivos en la raíz de tu proyecto. Para [obtener datos remotos](/es/guides/data-fetching/), usa `fetch()`.
 
-These data requests are made in the frontmatter of the Astro component and use top-level await.
+Estas solicitudes de datos se realizan en el frontmatter del componente de Astro y utilizan el operador await a nivel superior.
 
 ```astro title="src/pages/index.astro"
 ---
 import { getCollection } from 'astro:content';
 
-// Get all `src/content/blog/` entries
+// Obtener todas las entradas `src/content/blog/`
 const allBlogPosts = await getCollection('blog');
 
-// Get all `src/pages/posts/` entries
+// Obtener todas las entradas `src/pages/posts/`
 const allPosts = await Astro.glob('../pages/posts/*.md');
 
 const response = await fetch('https://randomuser.me/api/');
@@ -400,26 +400,26 @@ const randomUser = data.results[0];
 ---
 ```
 
-See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob), [querying using the Collections API](/en/guides/content-collections/#querying-collections) or [fetching remote data](/en/guides/data-fetching/).
+Ver más acerca de [importaciones de archivos locales con `Astro.glob()`](/es/guides/imports/#astroglob), [consultas usando la API de colecciones](/es/guides/content-collections/#querying-collections) o [obtención de datos remotos](/es/guides/data-fetching/).
 
 ### Migrando el sistema de estilos de Next a Astro
 
-You may need to replace any [CSS-in-JS libraries](https://github.com/withastro/astro/issues/4432) (e.g. styled-components) with other available CSS options in Astro.
+Es posible que debas reemplazar cualquier [biblioteca de CSS-in-JS](https://github.com/withastro/astro/issues/4432) (p. ej. styled-components) con otras opciones de CSS disponibles en Astro.
 
-If necessary, convert any inline style objects (`style={{ fontWeight: "bold" }}`) to inline HTML style attributes (`style="font-weight:bold;"`). Or, use an [Astro `<style>` tag](/en/guides/styling/#styling-in-astro) for scoped CSS styles.
+Si es necesario, convierte cualquier objeto de estilo en línea (`style={{ fontWeight: "bold" }}`) a atributos de estilo HTML en línea (`style="font-weight:bold;"`). O, usa una [etiqueta `<style>` de Astro](/es/guides/styling/#estilando-en-astro) para estilos CSS con ámbito limitado.
 
 ```astro title="src/components/Card.astro" del={1} ins={2}
 <div style={{backgroundColor: `#f4f4f4`, padding: `1em`}}>{message}</div>
 <div style="background-color: #f4f4f4; padding: 1em;">{message}</div>
 ```
 
-Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your existing Tailwind code are required!
+Tailwind es compatible después de instalar la [integración de Tailwind](/es/guides/integrations-guide/tailwind/). ¡No se requieren cambios en tu código de Tailwind existente!
 
-See more about [Styling in Astro](/en/guides/styling/).
+Ver más acerca de [Estilos en Astro](/es/guides/styling/).
 
-### Next Image Plugin to Astro
+### Plugin de Imagen de Next a Astro
 
-Convert any Next `<Image />` components with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>`. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for Astro's `<Image />` and `<Picture />` components, and note that several will differ from Next's attributes. 
+Convierte cualquier componente `<Image />` de Next a los [propios componentes de integración de imagen de Astro](/es/guides/images/#integración-image-de-astro), o a un estándar HTML `<img>`. Consulta [la lista completa de los atributos de los componentes](/es/guides/integrations-guide/image/#usage) disponibles para los componentes `<Image />` y `<Picture />` de Astro, y ten en cuenta que varios difieren de los atributos de Next. 
 
 ```astro title="src/pages/index.astro"
 ---
@@ -431,21 +431,21 @@ import rocket from '../images/rocket.svg';
 <img src={rocket} alt="A rocketship in space.">
 ```
 
-In React (`.jsx`) components, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
+En los componentes de React (`.jsx`), utiliza la sintaxis estándar de imagen (`<img />`). Astro no optimizará estas imágenes, pero puedes instalar y usar paquetes de NPM  para obtener más flexibilidad.
 
-You can learn more about [using images in Astro](/en/guides/images/) in the Images Guide.
+Puedes aprender más sobre [cómo usar imágenes en Astro](/es/guides/images/) en la Guía de Imágenes.
 
 
 
 ## Ejemplo guiado: Cómo migrar la obtención de datos en Next a Astro
 
-Here is an example of Next.js Pokédex data fetch converted to Astro.
+Aquí tienes un ejemplo de cómo obtener datos de una Pokédex en Next.js y cómo convertirlo a Astro.
     
-`pages/index.js` fetches and displays a list of the first 151 Pokémon using [the REST PokéAPI](https://pokeapi.co/).
+`pages/index.js` obtiene y muestra una lista de los primeros 151 Pokémon utilizando [la REST PokéAPI](https://pokeapi.co/).
 
-Here's how to recreate that in `src/pages/index.astro`, replacing `getStaticProps()` with `fetch()`.
+Aquí te mostramos cómo recrear eso en `src/pages/index.astro`, remplazando `getStaticProps()` con `fetch()`.
 
-1. Identify the return() JSX.
+1. Identifica el JSX de return().
 
 ```jsx title="pages/index.js" {6-18}
 import Link from 'next/link'
@@ -491,19 +491,19 @@ export const getStaticProps = async () => {
 }
 ```
 
-2. Create `src/pages/index.astro`
+2. Crea `src/pages/index.astro`
 
-Use the return value of the Next function. Convert any Next or React syntax to Astro, including changing the case of any [HTML global attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes).
+Utiliza el valor de retorno de la función Next. Convierte cualquier sintaxis de Next o React a Astro, incluyendo el cambio de mayúsculas y minúsculas de cualquier [atributo global de HTML](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes).
 
-Note that:
+Nota que:
 
-- `.map` just works!
+- `.map` ¡simplemente funciona!
 
-- `className` becomes `class`.
+- `className` se convierte en `class`.
 
-- `<Link>` becomes `<a>`.
+- `<Link>` se convierte en `<a>`.
 
-- The `<> </>` fragment is not required in Astro templating.
+- El fragmento `<> </>` no es necesario en la plantilla de Astro.
 
 ```astro title="src/pages/index.astro" "class" "</a>" "<a"
 ---
@@ -521,12 +521,12 @@ Note that:
 </ul>
 ```
 
-3. Add any needed imports, props, and JavaScript
+3. Agrega cualquier importación, propiedad y JavaScript necesario.
 
-Note that:
+Nota que:
 
-- the `getStaticProps` function is no longer needed. Data from the API is fetched directly in the code fence.
-- A `<Layout>` component is imported and wraps the page templating.
+- La función `getStaticProps` ya no es necesaria. Los datos de la API se obtienen directamente en el bloque de código.
+- Se importa un componente `<Layout>` y envuelve la plantilla de la página.
 
 ```astro ins={2,4-16,19,31} title="src/pages/index.astro"
 ---
@@ -564,11 +564,11 @@ const pokemons = resJson.results.map(pokemon => {
 
 ## Recursos de la comunidad
 
-- Video: [NextJS to Astro: more control = faster sites](https://www.youtube.com/watch?v=PSzCtdM20Fc).
+- Video: [De NextJS a Astro: más control = sitios más rápidos](https://www.youtube.com/watch?v=PSzCtdM20Fc).
 
-- Video: [How Astro made my site 100x faster](https://www.youtube.com/watch?v=cOxA3kMYtkM).
+- Video: [Cómo Astro hizo que mi sitio sea 100 veces más rápido](https://www.youtube.com/watch?v=cOxA3kMYtkM).
 
-- Blog post: [Migrating from Next.js to Astro](https://johnzanussi.com/posts/nextjs-to-astro-migration).
+- Artículo de blog: [Migrando de Next.js a Astro](https://johnzanussi.com/posts/nextjs-to-astro-migration).
 
-- Blog Post: [From NextJS to Astro](https://vanntile.com/blog/next-to-astro).
-- Blog Post: [Converting Next.js to Astro](https://ericclemmons.com/blog/converting-nextjs-to-astro).
+- Artículo de blog: [Desde NextJS a Astro](https://vanntile.com/blog/next-to-astro).
+- Artículo de blog: [Convirtiendo Next.js a Astro](https://ericclemmons.com/blog/converting-nextjs-to-astro).
