Apply suggestions from code review

--- a/src/content/docs/es/guides/integrations-guide/tailwind.mdx
+++ b/src/content/docs/es/guides/integrations-guide/tailwind.mdx
@@ -1,7 +1,7 @@
 ---
 type: integration
 title: '@astrojs/tailwind'
-description: Aprende como usar la integración @astrojs/tailwind en tu proyecto Astro.
+description: Aprende como usar la integración @astrojs/tailwind en tu proyecto de Astro.
 githubURL: 'https://github.com/withastro/astro/tree/main/packages/integrations/tailwind/'
 hasREADME: true
 category: other
@@ -76,13 +76,13 @@ Tambien [Autoprefixer](https://github.com/postcss/autoprefixer) es configurado a
 
 ### Configurando Tailwind
 
-Si has usado las instrucciones de instalación rápida y has dicho que sí a cada instrucción, verás un archivo `tailwind.config.cjs` en el directorio raíz de tu proyecto. Usa este archivo para tus cambios de configuración de Tailwind. Puedes aprender a personalizar Tailwind usando este archivo [en la documentación de Tailwind](https://tailwindcss.com/docs/configuration).
+Si has usado las instrucciones de instalación rápida y has dicho que sí a cada instrucción, verás un archivo `tailwind.config.cjs` en el directorio raíz de tu proyecto. Usa este archivo para cambiar la configuración de Tailwind. Puedes aprender a personalizar Tailwind usando este archivo en la [documentación de Tailwind](https://tailwindcss.com/docs/configuration).
 
 Si no está ahí, puedes agregar tu propio archivo `tailwind.config.(js|cjs|mjs)` al directorio raíz y la integración usará sus configuraciones. Esto puede ser genial si ya tienes Tailwind configurado en otro proyecto y quieres traer esa configuración a este.
 
 ### Configurando la Integración
 
-La integración de Astro Tailwind maneja la comunicación entre Astro y Tailwind y tiene sus propias opciones. Cambia estas en el archivo `astro.config.mjs` (*no* el archivo de configuración de Tailwind) que es donde se encuentran los ajustes de integración de tu proyecto.
+La integración de Astro Tailwind maneja la comunicación entre Astro y Tailwind y tiene sus propias opciones. Cambia estas opciones en el archivo `astro.config.mjs` (*no* el archivo de configuración de Tailwind) donde se encuentran los ajustes de integración de tu proyecto.
 
 #### config.path
 
@@ -173,7 +173,7 @@ module.exports = {
 
 ### Los modificadores basados en clases no funcionan con las directivas `@apply`
 
-Ciertas clases de Tailwind con modificadores dependen de combinar clases en varios elementos. Por ejemplo, `group-hover:text-gray` se compila en `.group:hover .text-gray`. Cuando se usa con la directiva `@apply` en las etiquetas `<style>` de Astro, los estilos compilados se eliminan de la salida de compilación porque no coinciden con ningún marcado en el archivo `.astro`. También puede ocurrir el mismo problema en componentes de marcos que admiten estilos con alcance como Vue y Svelte.
+Ciertas clases de Tailwind con modificadores dependen de combinar clases en varios elementos. Por ejemplo, `group-hover:text-gray` se compila en `.group:hover .text-gray`. Cuando se usa con la directiva `@apply` en las etiquetas `<style>` de Astro, los estilos compilados se eliminan de la salida de compilación porque no coinciden con ningún marcado en el archivo `.astro`. También puede ocurrir el mismo problema en componentes de framework que admiten estilos con alcance local como Vue y Svelte.
 
 Para arreglar esto, puedes usar clases en línea en su lugar:
 
