--- a/src/content/docs/es/guides/cms/statamic.mdx
+++ b/src/content/docs/es/guides/cms/statamic.mdx
@@ -1,6 +1,6 @@
 ---
 title: Headless Statamic y Astro
-description: Agrega contenido a tu proyecto Astro usando Statamic como CMS
+description: Agrega contenido a tu proyecto de Astro usando Statamic como CMS
 type: cms
 stub: false
 service: Statamic
@@ -19,7 +19,7 @@ Para empezar, necesitarás lo siguiente:
 
 1. Solo están disponibles las API REST y GraphQL API en la versión pro de Statamic. Puedes probar la versión Pro gratis en tu [máquina local](https://statamic.dev/tips/how-to-enable-statamic-pro#trial-mode).
 2. **Un proyecto Astro** - Si todavía necesitas un proyecto Astro, nuestra [guía de instalación](/es/install/auto/) te pondrá en marcha rápidamente.
-3. **Un sitio Statamic** - Si necesitas un sitio Statamic, [esta guía](https://statamic.dev/quick-start-guide) te ayudará a empezar.
+3. **Un sitio Statamic** - Si necesitas un sitio Statamic, [la guía de instalación de Statamic](https://statamic.dev/quick-start-guide) te ayudará a empezar.
 Recuerda [habilitar la API REST](https://statamic.dev/rest-api#enable-the-api) o la [API GraphQL](https://statamic.dev/graphql#enable-graphql) añadiendo `STATAMIC_API_ENABLED=true` o `STATAMIC_GRAPHQL_ENABLED=true` en el archivo `.env` y habilitando los recursos necesarios en el archivo de configuración de la API.
 
 :::caution
@@ -28,9 +28,9 @@ Todos los ejemplos asumen que tu sitio web tiene una colección llamada `posts`,
 
 ### Obteniendo Datos
 :::caution
-Si estás usando Statamic y Astro en tu máquina local, recuerda usar `127.0.0.1` en lugar de `localhost` al obtener datos de la API.
+Si estás usando Statamic y Astro en tu máquina local, recuerda usar `127.0.0.1` en lugar de `localhost` al solicitar los datos a la API.
 
-Cuando se solicita desde el servidor Astro, `localhost` no se resuelve correctamente como lo hace en el navegador y cualquier solicitud a cualquiera de las API fallará.
+Cuando se solicita los datos desde el frontmatter de Astro, `localhost` no se resuelve correctamente como lo hace en el navegador y cualquier solicitud a cualquiera de las API fallará.
 :::
 
 #### REST API
